# fastapi-exsample-base-app

./: README.md  docker-compose.yml  main.py  pyproject.toml
fast-application/: .env.template  create_fastapi_app.py  main.py
fast-application/alembic/: env.py
fast-application/alembic/versions/: 2025_11_08_1648-c39e229e43cd_create_users_table.py  2025_11_08_1651-a88e206ec4a7_create_address_table.py  2025_11_08_1705-064a0d79d205_create_users_table.py  2025_11_09_1001-d4f7402784ac_create_users_table.py  2025_12_03_1315-ff2991124eed_delete_foo_and_bar_in_users_table.py  2025_12_04_1504-45ab151260cb_add_created_in_users_table.py  2025_12_04_1533-6c3164c2dab9_create_uuid_v7_function.py  2025_12_04_1539-df0e141867dd_create_pets_table.py  2025_12_04_1649-4a791f79e278_add_is_active_in_users_table.py  2025_12_04_1654-37166fd9a6cc_add_address_table.py
fast-application/api/: __init__.py
fast-application/api/api_v1/: __init__.py  dependencies_examples.py  users.py
fast-application/api/api_v1/dependencies/: cls_deps.py  func_deps.py
fast-application/core/: config.py
fast-application/core/models/: __init__.py  base.py  db_helper.py  user.py
fast-application/core/schemas/: user.py
fast-application/crud/: users.py
fast-application/tasks/: __init__.py
fast-application/utils/: helper.py
