[project]
name = "fastapi-exsample-base-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.4",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn>=0.38.0",
]
